Add tests comments controller
