# swagger/v1/swagger.yaml
@@ -9,6 +9,54 @@ components:
       type: http
       scheme: bearer
 paths:
+  "/api/v1/comments":
+    post:
+      summary: Create comment
+      tags:
+      - Comments
+      security:
+      - bearerAuth: []
+      parameters: []
+      responses:
+        '201':
+          description: OK
+          content: {}
+        '422':
+          description: UNPROCESSABLE ENTITY
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                comment:
+                  properties:
+                    content:
+                      type: string
+                    project_id:
+                      type: string
+                    task_id:
+                      type: string
+  "/api/v1/comments/{id}":
+    get:
+      summary: Show comments by id
+      tags:
+      - Comments
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: OK
+          content: {}
+        '404':
+          description: Not found
+          content: {}
   "/api/v1/login":
     post:
       summary: Login user
@@ -43,6 +91,9 @@ paths:
         '201':
           description: OK
           content: {}
+        '422':
+          description: 'Unprocessable Entity '
+          content: {}
       requestBody:
         content:
           application/json:
@@ -69,6 +120,9 @@ paths:
         '200':
           description: OK
           content: {}
+        '404':
+          description: Not found
+          content: {}
     patch:
       summary: Update project by id
       tags:
@@ -84,6 +138,9 @@ paths:
       responses:
         '200':
           description: OK
+          content: {}
+        '404':
+          description: Not found
           content: {}
       requestBody:
         content:
@@ -110,6 +167,9 @@ paths:
         '200':
           description: OK
           content: {}
+        '404':
+          description: Not found
+          content: {}
   "/api/v1/registration":
     post:
       summary: Create user
@@ -124,7 +184,13 @@ paths:
         content:
           application/json:
             schema:
-              type: string
+              properties:
+                name:
+                  type: string
+                password:
+                  type: string
+                password_confirmation:
+                  type: string
   "/api/v1/tasks":
     post:
       summary: Create task
@@ -167,6 +233,53 @@ paths:
       responses:
         '200':
           description: OK
+          content: {}
+        '404':
+          description: Not found
+          content: {}
+    patch:
+      summary: Update tasks by id
+      tags:
+      - Tasks
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: OK
+          content: {}
+        '404':
+          description: Not found
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                project:
+                  properties:
+                    name:
+                      type: string
+    delete:
+      summary: Delete tasks by id
+      tags:
+      - Tasks
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '404':
+          description: Not found
           content: {}
 servers:
 - url: http://{defaultHost}
